# sslcompare

./: .gitignore  README.md  README.txt  build.sh  pyproject.toml  sslcompare.py  sslcompare_standalone.py
baselines/: anssi.json  state_of_art.json
sslcompare/: anssi.json  sslcompare.py
sslcompare_standalone/: pipx_metadata.json
testssl.sh/etc/: Apple.pem
